src/objects/ArchivedContact__c.object
<CustomObject>
    <description>Object used to store the Archived Contact Values</description>
    <fields>
        <fullName>Archived_Email_Address__c</fullName>
        <description>Archived Email Address</description>
        <label>Archived Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Birth_City__c</fullName>
        <label>Birth City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birth_Country__c</fullName>
        <label>Birth Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>List_of_Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Birth_Postal_Code__c</fullName>
        <label>Birth Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birth_State__c</fullName>
        <label>Birth State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State_Provinces</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Birth_Street__c</fullName>
        <label>Birth Street</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Contact Object</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ArchivedContacts</relationshipLabel>
        <relationshipName>ArchivedContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cust_Id__c</fullName>
        <externalId>true</externalId>
        <label>Cust Id</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Deceased_date__c</fullName>
        <label>Deceased date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email field</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName__c &amp;&quot; &quot;&amp; LastName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsMasterContact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsMasterContact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MiddleName__c</fullName>
        <label>MiddleName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Cust_Id__c</fullName>
        <label>Parent Cust Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <label>Release</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSN_Encrypted__c</fullName>
        <description>Social Security Number Encrypted</description>
        <label>SSN Encrypted</label>
        <length>12</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Security_Code__c</fullName>
        <externalId>true</externalId>
        <label>Security Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>ArchivedContact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ArchivedContact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ArchivedContacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>